--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -49,7 +49,7 @@
     </div>
     <div *ngFor="let product of cart()" class="cart-item">
       <div class="product-image">
-        <img src="{{ product.image }}" alt="{{ product.title }}" class="w-16 h-16 object-cover rounded" />
+        <img src="{{ product.images[0] }}" alt="{{ product.title }}" class="w-16 h-16 object-cover rounded" />
       </div>
       <div class="product-details">
         <p class="product-title">{{ product.title }}</p>
