added time-ago pipe and highlight directive

--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="px-10">
     <h1 class="text-lg font-bold">About</h1>
-    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe corporis reprehenderit sed officia ut iure? Ea, enim perspiciatis placeat amet quasi pariatur similique nostrum quis, nobis consequatur doloribus possimus atque.</p>
+    <p class="text-sm">Lorem ipsum dolor <span highlight>sit amet consectetur adipisicing elit.</span> Saepe corporis reprehenderit sed officia ut iure? Ea, enim perspiciatis placeat amet quasi pariatur similique nostrum quis, nobis consequatur doloribus possimus atque.</p>
     <p class="text-sm">Número de clientes:</p>
     <app-counter class="text-sm" [duration]="duration()" [message]="message()" *ngIf="duration() > 0"/>
     <div>
