--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -10,9 +10,10 @@
                     alt="ecommerce" 
                     class="object-cover object-center rounded border-2 border-gray-200"
                     *ngFor="let image of product()?.images"
-                    [src]="image" />
+                    [src]="image" 
                     (click)="changeCover(image)"
-                    [class.border-red-400]="img === cover()"
+                    [class.border-red-400]="image === cover()"
+                />
             </div>
         </div>
     </div>
