--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -6,14 +6,16 @@
         </div>
         <div class="flex items-center justify-center mt-1">
             <div class="grid grid-cols-3 gap-1">
-                <img 
+                @for (image of product()?.images; track image) {
+<img 
                     alt="ecommerce" 
                     class="object-cover object-center rounded border-2 border-gray-200"
-                    *ngFor="let image of product()?.images"
+                   
                     [src]="image" 
                     (click)="changeCover(image)"
                     [class.border-red-400]="image === cover()"
                 />
+}
             </div>
         </div>
     </div>
