--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -45,10 +45,13 @@
     </button>
   </div>
   <div>
-    <div *ngIf="cart().length === 0" class="empty-cart-message">
+    @if (cart().length === 0) {
+<div class="empty-cart-message">
       <p>Your cart is empty</p>
     </div>
-    <div *ngFor="let product of cart()" class="cart-item">
+}
+    @for (product of cart(); track product) {
+<div class="cart-item">
       <div class="product-image">
         <img src="{{ product.images[0] }}" alt="{{ product.title }}" class="w-16 h-16 object-cover rounded" />
       </div>
@@ -57,6 +60,7 @@
         <p class="product-price">{{ product.price | currency }}</p>
       </div>
     </div>
+}
     <div class="bg-blue-100 p-4 rounded-lg shadow">
       <p class="text-gray-700 font-semibold">Total: {{ total() }}</p>
     </div>
